--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 /Assets/FreeAssets/
+Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset
+Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset.meta
