feat: settings data persistence.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ crashlytics-build.properties
 /Assets/FreeAssets/
 Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset
 Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset.meta
+
+AntiDroneSimulatorGameSettings.json
