perf: optimize drone & swarm.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset
 Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset.meta
 
 AntiDroneSimulatorGameSettings.json
+/Profiler
