--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.11",
     "com.unity.visualscripting": "1.9.4",
+    "com.unity.xr.openxr": "1.12.1",
     "com.unity.xr.picoxr": "file:C:/Users/dell/Desktop/AntiDroneSimulator/PICO Unity Integration SDK-3.0.0-240902",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
