feat:  set steam vr display sucessfully.

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ Assets/Resources/Fonts/FangZhengFangSongJianTi-1 SDF.asset.meta
 AntiDroneSimulatorGameSettings.json
 /Profiler
 /BackupUnusedAssets
+/Assets/SteamVR
+Assets/SteamVR.meta
+/Assets/Resources/Fonts
+/Assets/Resources/Fonts
+/Assets/Resources/Fonts
+/Assets/Resources/Fonts
