--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.11",
     "com.unity.visualscripting": "1.9.4",
+    "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.2.1.tgz",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
