chore: update steam vr bindings.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ crashlytics-build.properties
 AntiDroneSimulatorGameSettings.json
 .vsconfig
 /Assets/Resources/Fonts
+/SteamVR_SteamVR_antidronesimulator_vr_steam
