--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ AntiDroneSimulatorGameSettings.json
 .vsconfig
 /Assets/Resources/Fonts
 /SteamVR_SteamVR_antidronesimulator_vr_steam
+/Assets/StreamingAssets/Whisper
