--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.openxr": "1.12.0",
     "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.2.1.tgz",
+    "com.whisper.unity": "https://github.com/Macoron/whisper.unity.git?path=/Packages/com.whisper.unity",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
