feat: custom input -> pico controller standard input.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ AntiDroneSimulatorGameSettings.json
 /Assets/Resources/Fonts
 /SteamVR_SteamVR_antidronesimulator_vr_steam
 /Assets/StreamingAssets/Whisper
+/SteamVR_antidronesimulator_pico_controller
