--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ AntiDroneSimulatorGameSettings.json
 /SteamVR_SteamVR_antidronesimulator_vr_steam
 /Assets/StreamingAssets/Whisper
 /SteamVR_antidronesimulator_pico_controller
+/Assets/KAT/Demo
+Assets/KAT/Demo.meta
+Build.zip
