--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ AntiDroneSimulatorGameSettings.json
 /Assets/KAT/Demo
 Assets/KAT/Demo.meta
 Build.zip
+referencemap.xml
+referenceType2File.xml
+unityProject.vrmanifest
